# laser_gates

./: Makefile  README.md  game.py  game.pyw  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-app.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/laser_gates/: __init__.py  app.py  config.py  contexts.py  laser_gates.code-workspace  logic.py  player.py  resources.py  utils.py  view.py  waves.py
src/laser_gates/waves/: __init__.py  densepack.py  forcefield.py  wave_base.py
tests/: conftest.py  test_config.py  test_example.py  test_logic.py  test_resources.py  test_utils.py  test_waves.py
